# orderbook

./: README.md  load_test.sh
backend/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  shell.nix
backend/src/: api.rs  error.rs  main.rs  order.rs  repository.rs  storage.rs
backend/src/api/: forms.rs  routes.rs
backend/src/repository/: in_memory.rs  redis.rs
frontend/: README.md  package-lock.json  package.json  shell.nix
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  OrderCard.css  OrderCard.tsx  OrderForm.css  OrderForm.tsx  OrderList.css  OrderList.tsx  api.ts
