[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-trait = "0.1.68"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
fastrand = "1.9.0"
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
rustc-hash = "1.1.0"
